# analogue-retail

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  initialize_database.py  main_server.py  prompts  pyproject.toml  requirements.txt  tester.py
backend/: Dockerfile  Makefile  main_server.py  pyproject.toml
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json
frontend/src/: App.js  setupProxy.js
initializer/: Dockerfile  initialize_database.py  pyproject.toml
retail-frontend/: nginx.conf  package-lock.json  package.json
retail-frontend/src/: App.css  App.js  setupProxy.js
terraform/dev/: backend.tf  main.tf  outputs.tf
terraform/gcr/: backend.tf  main.tf  variables.tf
terraform/gke/: backend.tf  main.tf  outputs.tf
terraform/gke/cluster/: main.tf  outputs.tf  variables.tf
terraform/gke/dns/: main.tf  outputs.tf  variables.tf
tester/: Dockerfile  pyproject.toml  requirements.txt  tester.py
tf/dev/: README.md  buckets.tf  main.tf  outputs.tf  variables.tf
tf/prod/: .terraform.lock.hcl  backend.tf  cdn.tf  clusters.tf  dns.tf  gcr.tf  k8s.tf  main.tf  outputs.tf  variables.tf
tf/remote-state/: main.tf  variables.tf
volume/cache/: machine.json
