[tool.poetry]
name = "retail-backend"
version = "0.1.0"
description = "Backend service for retail application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
mysql-connector-python = "^8.0.26"
pydantic = "^1.8.2"
google-cloud-storage = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 