[tool.poetry]
name = "retail-tester"
version = "0.1.0"
description = "Testing utilities for the retail backend"
authors = ["Brendan Copp brendancopp1@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 